[package]
name = "mesh-segmentation"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Mesh segmentation prepass module that normalizes sub-facet paint strokes into whole-triangle assignments"

[dependencies]
slicer-sdk = { path = "../../../crates/slicer-sdk" }
slicer-schema = { path = "../../../crates/slicer-schema" }
slicer-ir = { path = "../../../crates/slicer-ir" }

[dev-dependencies]
slicer-sdk = { path = "../../../crates/slicer-sdk", features = ["test"] }

# Required by the `#[slicer_module]` macro's wasm32-only component export
# glue. On native builds the emitted `wit_bindgen::generate!` call is
# gated behind `#[cfg(target_arch = "wasm32")]` and never expanded.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wit-bindgen.workspace = true

[lints]
workspace = true
