[package]
name = "rectilinear-infill"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Rectilinear sparse infill generator implementing LayerModule for Layer::Infill stage"

[dependencies]
slicer-sdk = { path = "../../../crates/slicer-sdk" }
slicer-schema = { path = "../../../crates/slicer-schema" }
slicer-ir = { path = "../../../crates/slicer-ir" }

[dev-dependencies]

# Required by the `#[slicer_module]` macro's wasm32-only component export
# glue. On native builds the emitted `wit_bindgen::generate!` call is
# gated behind `#[cfg(target_arch = "wasm32")]` and never expanded.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wit-bindgen = "0.24"
